--- a/.github/workflows/Centos_kernel_latest_xanmod_lts_gcc9.yml
+++ b/.github/workflows/Centos_kernel_latest_xanmod_lts_gcc9.yml
@@ -38,6 +38,8 @@ jobs:
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
+        mkdir /workdir
+        mkdir /workdir/upload
         sudo chown $USER:$GROUPS /workdir
         sudo chown $USER:$GROUPS /workdir/upload
         
