--- a/.github/workflows/Centos_kernel_latest_xanmod_lts_C8.yml
+++ b/.github/workflows/Centos_kernel_latest_xanmod_lts_C8.yml
@@ -37,6 +37,8 @@ jobs:
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
+        mkdir /workdir
+        mkdir /workdir/upload
         sudo chown $USER:$GROUPS /workdir
         sudo chown $USER:$GROUPS /workdir/upload
 
