--- a/.github/workflows/Centos_kernel_latest_test.yml
+++ b/.github/workflows/Centos_kernel_latest_test.yml
@@ -49,11 +49,11 @@ jobs:
         kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
         echo "github_ver=" $github_ver
         echo "kernel_ver=" $kernel_ver
-        if [[ $github_ver == *"$kernel_ver"* ]]; then
-            echo "::set-output name=status::fail"
-        else
+        #if [[ $github_ver == *"$kernel_ver"* ]]; then
+        #    echo "::set-output name=status::fail"
+        #else
             echo "::set-output name=status::success"
-        fi     
+        #fi     
 
     - name: Get source code
       id: code
