--- a/.github/workflows/update_elrepo_config.yml
+++ b/.github/workflows/update_elrepo_config.yml
@@ -45,7 +45,7 @@ jobs:
         #sudo mkdir -p /workdir/upload
         #sudo chown $USER:$GROUPS /workdir
         #sudo chown $USER:$GROUPS /workdir/upload
-        mkdir /workdir/upload
+        #mkdir /workdir/upload
         sudo chown $USER:$GROUPS /workdir
         sudo chown $USER:$GROUPS /workdir/upload
         
