--- a/.github/workflows/Ubuntu_kernel_test.yml
+++ b/.github/workflows/Ubuntu_kernel_test.yml
@@ -6,7 +6,7 @@
 # Change from P3TERX
 #
 
-name: Ubuntu Kernel Test
+name: Ubuntu Kernel Latest
 
 on:
   workflow_dispatch:
@@ -37,29 +37,20 @@ jobs:
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
+        apt update
+        apt-get install libfuse-dev libarchive-dev xfsprogs
+        apt-get install btrfs-tools
+        pip install yamlish junit_xml
         sudo chown $USER:$GROUPS /workdir
         sudo chown $USER:$GROUPS /workdir/upload
-
-    - name: Check for updates
-      id: check
-      run: |
-        github_tag=$(curl -s 'https://api.github.com/repos/ylx2016/kernel/releases' | grep 'Ubuntu_Kernel' | grep '_latest_bbr_' | head -n 1 | awk -F '"' '{print $4}' | awk -F '[/]' '{print $8}')
-        github_ver=$(curl -s 'https://api.github.com/repos/ylx2016/kernel/releases' | grep ${github_tag}  | grep 'deb' | grep 'headers' | awk -F '"' '{print $4}' | awk -F '[/]' '{print $9}' | awk -F '[-]' '{print $3}' | awk -F '[_]' '{print $1}')
-        kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
-        echo "github_ver=" $github_ver
-        echo "kernel_ver=" $kernel_ver
-        echo "::set-output name=status::success"
 
     - name: Get source code
       id: code
       working-directory: /workdir
-      if: steps.check.outputs.status == 'success'
       run: |
         df -hT $PWD
-        kernel_file=$(curl -s https://www.kernel.org/ | grep 'alt="Download"' | awk -F '"' '{print $2}')
-        kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
-        wget -O kernel.tar.xz $kernel_file
-        tar -Jxvf kernel.tar.xz -C /workdir && cd /workdir/linux-$kernel_ver
+        wget https://github.com/lkl/linux/archive/refs/heads/master.zip
+        unzip master.zip
         echo "::set-output name=status::success"
 
     - name: SSH connection to Actions
@@ -74,12 +65,12 @@ jobs:
       if: steps.code.outputs.status == 'success'
       working-directory: /workdir
       run: |
-        kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
-        cd linux-$kernel_ver
+        kernel_ver=5.3
+        cd linux-master
         wget -O .config https://raw.githubusercontent.com/ylx2016/kernel/master/config_elrepo
         sed -ri '/CONFIG_SYSTEM_TRUSTED_KEYS/s/=.+/=""/g' .config && scripts/config --disable MODULE_SIG && scripts/config --disable DEBUG_INFO
         echo -e "$(nproc) thread compile"
-        sudo time make -j$(nproc) deb-pkg
+        sudo time make -j$(nproc) -C tools/lkl
         cd /workdir && mv *.deb /workdir/upload
         echo "::set-output name=status::success"
         echo "FILE_DATE=Kernel_Ubuntu_$kernel_ver_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV   
@@ -109,7 +100,7 @@ jobs:
       if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success' && !cancelled()
       run: |
         kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
-        echo "::set-output name=release_tag::Ubuntu_Kernel_${kernel_ver}_test_$(date +"%Y.%m.%d-%H%M")"
+        echo "::set-output name=release_tag::Ubuntu_Kernel_${kernel_ver}_latest_bbr_$(date +"%Y.%m.%d-%H%M")"
         touch release.txt
         echo "::set-output name=status::success"
 
