--- a/.github/workflows/Ubuntu_kernel_test.yml
+++ b/.github/workflows/Ubuntu_kernel_test.yml
@@ -20,8 +20,9 @@ on:
 
 env:
   UPLOAD_DIR: true
-  UPLOAD_RELEASE: true
+  UPLOAD_RELEASE: false
   UPLOAD_WETRANSFER: false
+  WEBSSH: true
   TZ: Asia/Shanghai
 
 jobs:
@@ -55,7 +56,7 @@ jobs:
 
     - name: SSH connection to Actions
       uses: P3TERX/ssh2actions@v1.0.0
-      if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') || contains(github.event.action, 'ssh')
+      if: env.WEBSSH == 'true'
       env:
         TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
