--- a/.github/workflows/Ubuntu_kernel_test.yml
+++ b/.github/workflows/Ubuntu_kernel_test.yml
@@ -39,9 +39,9 @@ jobs:
         DEBIAN_FRONTEND: noninteractive
       run: |
         apt update
-        apt-get install libfuse-dev libarchive-dev xfsprogs
-        apt-get install btrfs-tools
-        pip install yamlish junit_xml
+        apt-get install libfuse-dev libarchive-dev xfsprogs -y
+        apt-get install btrfs-tools -y
+        pip install yamlish junit_xml -y
         sudo chown $USER:$GROUPS /workdir
         sudo chown $USER:$GROUPS /workdir/upload
 
