--- a/.github/workflows/Ubuntu_kernel_test.yml
+++ b/.github/workflows/Ubuntu_kernel_test.yml
@@ -43,7 +43,7 @@ jobs:
         #apt-get install btrfs-tools -y
         #pip install yamlish junit_xml -y
         #mkdir /github
-        mkdir /github/home/
+        #mkdir /github/home/
         mkdir /github/home/.ssh/
         sudo chown $USER:$GROUPS /workdir
         sudo chown $USER:$GROUPS /workdir/upload
