--- a/.github/workflows/Ubuntu_kernel_test.yml
+++ b/.github/workflows/Ubuntu_kernel_test.yml
@@ -39,7 +39,7 @@ jobs:
         DEBIAN_FRONTEND: noninteractive
       run: |
         apt update
-        apt-get install libfuse-dev libarchive-dev xfsprogs -y
+        apt-get install libfuse-dev libarchive-dev xfsprogs jq -y
         #apt-get install btrfs-tools -y
         #pip install yamlish junit_xml -y
         #mkdir /github
