--- a/.github/workflows/Ubuntu_kernel_test.yml
+++ b/.github/workflows/Ubuntu_kernel_test.yml
@@ -41,7 +41,8 @@ jobs:
         apt update
         apt-get install libfuse-dev libarchive-dev xfsprogs jq -y
         #apt-get install btrfs-tools -y
-        #pip install yamlish junit_xml -y
+        apt install btrfs-progs pip -y
+        pip install yamlish junit_xml -y
         #mkdir /github
         #mkdir /github/home/
         mkdir /github/home/.ssh/
