--- a/.github/workflows/Ubuntu_kernel_test.yml
+++ b/.github/workflows/Ubuntu_kernel_test.yml
@@ -74,6 +74,8 @@ jobs:
         cd linux-master
         wget -O .config https://github.com/ylx2016/kernel/raw/master/config_lkl
         sed -ri '/CONFIG_SYSTEM_TRUSTED_KEYS/s/=.+/=""/g' .config && scripts/config --disable MODULE_SIG && scripts/config --disable DEBUG_INFO
+        #echo "#include <linux/sockios.h>" >> /workdir/linux-master/tools/lkl/lib/hijack/xlate.c
+        sed -i '1i\#include <linux/sockios.h>' tools/lkl/lib/hijack/xlate.c
         echo -e "$(nproc) thread compile"
         sudo time make -j$(nproc) -C tools/lkl
         mv /workdir/linux-master/tools/lkl/liblkl.a /workdir/upload
