--- a/.github/workflows/Ubuntu_kernel_test.yml
+++ b/.github/workflows/Ubuntu_kernel_test.yml
@@ -76,12 +76,12 @@ jobs:
         cd linux-master
         #wget -O .config https://github.com/ylx2016/kernel/raw/master/config_lkl
         wget -O .config https://github.com/ylx2016/kernel/raw/7eb006aae2f0ad2d9f1e52868e2ac7876635b58f/config_lkl
-        wget -O tools/lkl/.config https://github.com/ylx2016/kernel/raw/7eb006aae2f0ad2d9f1e52868e2ac7876635b58f/config_lkl
+        #wget -O tools/lkl/.config https://github.com/ylx2016/kernel/raw/7eb006aae2f0ad2d9f1e52868e2ac7876635b58f/config_lkl
         sed -ri '/CONFIG_SYSTEM_TRUSTED_KEYS/s/=.+/=""/g' .config && scripts/config --disable MODULE_SIG && scripts/config --disable DEBUG_INFO
-        cd tools/lkl
-        sed -ri '/CONFIG_SYSTEM_TRUSTED_KEYS/s/=.+/=""/g' .config && scripts/config --disable MODULE_SIG && scripts/config --disable DEBUG_INFO
+        #cd tools/lkl
+        #sed -ri '/CONFIG_SYSTEM_TRUSTED_KEYS/s/=.+/=""/g' .config && scripts/config --disable MODULE_SIG && scripts/config --disable DEBUG_INFO
         #echo "#include <linux/sockios.h>" >> /workdir/linux-master/tools/lkl/lib/hijack/xlate.c
-        cd /workdir/linux-master
+        #cd /workdir/linux-master
         sed -i '1i\#include <linux/sockios.h>' tools/lkl/lib/hijack/xlate.c
         echo -e "$(nproc) thread compile"
         sudo time make -j$(nproc) -C tools/lkl
