--- a/.github/workflows/Ubuntu_kernel_latest_xanmod_lts.yml
+++ b/.github/workflows/Ubuntu_kernel_latest_xanmod_lts.yml
@@ -20,7 +20,7 @@ on:
 
 env:
   UPLOAD_DIR: true
-  UPLOAD_RELEASE: false
+  UPLOAD_RELEASE: true
   UPLOAD_WETRANSFER: false
   WEBSSH: false
   TZ: Asia/Shanghai
