--- a/.github/workflows/Ubuntu_kernel_latest_xanmod_lts.yml
+++ b/.github/workflows/Ubuntu_kernel_latest_xanmod_lts.yml
@@ -96,7 +96,7 @@ jobs:
         sed -ri '/CONFIG_SYSTEM_TRUSTED_KEYS/s/=.+/=""/g' .config && scripts/config --disable MODULE_SIG && scripts/config --disable DEBUG_INFO
         sed -ri '/CONFIG_TLS/s/=.+/=y/g' .config
         sed -ri '/CONFIG_TLS_DEVICE/s/=.+/=y/g' .config
-        sed -ri '/CONFIG_MPTCP*/c\CONFIG_MPTCP=y' .config
+        sed -ri '/CONFIG_MPTCP*/c\CONFIG_MPTCP=m' .config
         echo -e "$(nproc) thread compile"
         sudo time make -j$(nproc) deb-pkg
         cd /workdir && mv *.deb /workdir/upload
