--- a/.github/workflows/Ubuntu_kernel_latest_xanmod_stable.yml
+++ b/.github/workflows/Ubuntu_kernel_latest_xanmod_stable.yml
@@ -6,28 +6,29 @@
 # Change from P3TERX
 #
 
-name: Centos Kernel latest XANMOD cacule GCC9
+name: Ubuntu Kernel latest XANMOD STABLE
 
 on:
   workflow_dispatch:
   #schedule:
-    #- cron: "30 20 * * 1,5"
+    #- cron: "36 20 * * 1,4"
    # inputs:
-     # ssh:
-       # description: 'SSH connection to Actions'
-       # required: false
+    #  ssh:
+     #   description: 'SSH connection to Actions'
+      #  required: false
        # default: 'false'
 
 env:
   UPLOAD_DIR: true
   UPLOAD_RELEASE: true
-  UPLOAD_WETRANSFER: true
+  UPLOAD_WETRANSFER: false
+  WEBSSH: false
   TZ: Asia/Shanghai
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: docker.io/qctt/kernelbuild:centos7
+    container: docker.io/qctt/kernelbuild:ubuntu20.04
     
     steps:
     - name: Checkout
@@ -37,67 +38,73 @@ jobs:
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
-        mkdir /workdir/upload
+        apt update
+        apt-get install libfuse-dev libarchive-dev xfsprogs jq -y
+        #apt-get install btrfs-tools -y
+        apt install btrfs-progs pip python -y
+        pip install yamlish junit_xml
+        #mkdir /github
+        #mkdir /github/home/
+        mkdir /github/home/.ssh/
         sudo chown $USER:$GROUPS /workdir
         sudo chown $USER:$GROUPS /workdir/upload
-        
+
     - name: Check for updates
       id: check
       run: |
-        github_tag=$(curl -s 'https://api.github.com/repos/ylx2016/kernel/releases' | grep 'Centos_Kernel' | grep '_cacule_latest_' | grep 'xanmod' | head -n 1 | awk -F '"' '{print $4}' | awk -F '[/]' '{print $8}')
+        github_tag=$(curl -s 'https://api.github.com/repos/ylx2016/kernel/releases' | grep 'Centos_Kernel' | grep '_stable_latest_' | grep 'xanmod' | head -n 1 | awk -F '"' '{print $4}' | awk -F '[/]' '{print $8}')
         github_ver=$(curl -s 'https://api.github.com/repos/ylx2016/kernel/releases' | grep ${github_tag} | grep 'rpm' | grep 'headers' | awk -F '"' '{print $4}' | awk -F '[/]' '{print $9}' | awk -F '[-]' '{print $3}' | awk -F '[_]' '{print $1}')
-        kernel_ver=$(curl -s https://sourceforge.net/projects/xanmod/files/releases/cacule/ | grep 'class="folder ">' | head -n 1 | awk -F '"' '{print $2}' | awk -F '[-]' '{print $1}' | awk -F '[-]' '{print $1}')
+        kernel_ver=$(curl -s https://sourceforge.net/projects/xanmod/files/releases/stable// | grep 'class="folder ">' | head -n 1 | awk -F '"' '{print $2}' | awk -F '[-]' '{print $1}')
         echo "github_ver=" $github_ver
         echo "kernel_ver=" $kernel_ver
         if [[ $github_ver == *"$kernel_ver"* ]]; then
             echo "::set-output name=status::fail"
         else
             echo "::set-output name=status::success"
-        fi
-        
+        fi        
+
     - name: Get source code
       id: code
-      if: steps.check.outputs.status == 'success' && (!cancelled())
+      if: steps.check.outputs.status == 'success' && (!cancelled())  
       working-directory: /workdir
       run: |
         df -hT $PWD
-        xanmod_cacule=$(curl -s https://sourceforge.net/projects/xanmod/files/releases/cacule/ | grep 'class="folder ">' | head -n 1 | awk -F '"' '{print $2}')
-        xanmod_cacule_ver=$(curl -s https://sourceforge.net/projects/xanmod/files/releases/cacule/ | grep 'class="folder ">' | head -n 1 | awk -F '"' '{print $2}' | awk -F '[-]' '{print $1}')
-        kernel_file=https://github.com/xanmod/linux/archive/refs/tags/$xanmod_cacule.zip
-        wget $kernel_file && unzip $xanmod_cacule.zip -d /workdir
+        xanmod_stable=$(curl -s https://sourceforge.net/projects/xanmod/files/releases/stable/ | grep 'class="folder ">' | head -n 1 | awk -F '"' '{print $2}')
+        xanmod_stable_ver=$(curl -s https://sourceforge.net/projects/xanmod/files/releases/stable/ | grep 'class="folder ">' | head -n 1 | awk -F '"' '{print $2}' | awk -F '[-]' '{print $1}')
+        kernel_file=https://github.com/xanmod/linux/archive/refs/tags/$xanmod_stable/.zip
+        wget $kernel_file && unzip $xanmod_stable.zip -d /workdir
         echo "::set-output name=status::success"
-        
+
     - name: SSH connection to Actions
       uses: P3TERX/ssh2actions@v1.0.0
-      if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') || contains(github.event.action, 'ssh')
+      if: env.WEBSSH == 'true'
       env:
         TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}         
+        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
 
     - name: Compile the kernel
       id: compile
-      if: steps.code.outputs.status == 'success' && (!cancelled())
+      if: steps.code.outputs.status == 'success'
       working-directory: /workdir
       run: |
-        xanmod_cacule_ver=$(curl -s https://sourceforge.net/projects/xanmod/files/releases/cacule/ | grep 'class="folder ">' | head -n 1 | awk -F '"' '{print $2}' | awk -F '[-]' '{print $1}')
-        xanmod_cacule=$(curl -s https://sourceforge.net/projects/xanmod/files/releases/cacule/ | grep 'class="folder ">' | head -n 1 | awk -F '"' '{print $2}')
-        cd linux-$xanmod_cacule
+        xanmod_stable_ver=$(curl -s https://sourceforge.net/projects/xanmod/files/releases/stable/ | grep 'class="folder ">' | head -n 1 | awk -F '"' '{print $2}' | awk -F '[-]' '{print $1}')
+        xanmod_stable=$(curl -s https://sourceforge.net/projects/xanmod/files/releases/stable/ | grep 'class="folder ">' | head -n 1 | awk -F '"' '{print $2}')
+        cd linux-$xanmod_stable
         if [ -f "CONFIGS/xanmod/gcc/config" ]; then
           cp CONFIGS/xanmod/gcc/config .config
         fi
         sed -ri '/CONFIG_SYSTEM_TRUSTED_KEYS/s/=.+/=""/g' .config && scripts/config --disable MODULE_SIG && scripts/config --disable DEBUG_INFO
         sed -ri '/CONFIG_TLS/s/=.+/=y/g' .config
         sed -ri '/CONFIG_TLS_DEVICE/s/=.+/=y/g' .config
-        sed -ri '/CONFIG_MPTCP*/c\CONFIG_MPTCP=y' .config
+        sed -ri '/CONFIG_MPTCP*/c\CONFIG_MPTCP=m' .config
         echo -e "$(nproc) thread compile"
-        ln -s /opt/rh/devtoolset-9/root/usr/bin/* /usr/local/bin/
-        sudo time make -j$(nproc) rpm-pkg
-        mv /root/rpmbuild/RPMS/x86_64/* /workdir/upload
+        sudo time make -j$(nproc) deb-pkg
+        cd /workdir && mv *.deb /workdir/upload
         echo "::set-output name=status::success"
-        echo "FILE_DATE=Kernel_Centos_${xanmod_cacule}_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
-        
+        echo "FILE_DATE=Kernel_Ubuntu_${xanmod_stable}_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV  
+
     - name: Check space usage
-      if: (!cancelled())
+      if: (!cancelled()) && steps.compile.outputs.status == 'success'
       run: df -hT
 
     - name: Upload
@@ -106,7 +113,7 @@ jobs:
       with:
         name: ${{ env.FILE_DATE }}
         path: /workdir/upload
-
+        
     - name: Upload to WeTransfer
       id: wetransfer
       if: steps.compile.outputs.status == 'success' && env.UPLOAD_WETRANSFER == 'true' && !cancelled()
@@ -115,16 +122,15 @@ jobs:
         ./transfer wet -s -p 16 --no-progress /workdir/upload 2>&1 | tee wetransfer.log
         echo "::warning file=wetransfer.com::$(cat wetransfer.log | grep https)"
         echo "::set-output name=url::$(cat wetransfer.log | grep https | cut -f3 -d" ")"
-
+        
     - name: Generate release tag
       id: tag
       if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success' && !cancelled()
       run: |
-        xanmod_cacule_ver=$(curl -s https://sourceforge.net/projects/xanmod/files/releases/cacule/ | grep 'class="folder ">' | head -n 1 | awk -F '"' '{print $2}' | awk -F '[-]' '{print $1}')
-        xanmod_cacule=$(curl -s https://sourceforge.net/projects/xanmod/files/releases/cacule/ | grep 'class="folder ">' | head -n 1 | awk -F '"' '{print $2}')
-        echo "::set-output name=release_tag::Centos_Kernel_${xanmod_cacule}_cacule_latest_$(date +"%Y.%m.%d-%H%M")"
+        xanmod_stable_ver=$(curl -s https://sourceforge.net/projects/xanmod/files/releases/stable/ | grep 'class="folder ">' | head -n 1 | awk -F '"' '{print $2}' | awk -F '[-]' '{print $1}')
+        xanmod_stable=$(curl -s https://sourceforge.net/projects/xanmod/files/releases/stable/ | grep 'class="folder ">' | head -n 1 | awk -F '"' '{print $2}')
+        echo "::set-output name=release_tag::Ubuntu_Kernel_${xanmod_stable}_stable_latest_$(date +"%Y.%m.%d-%H%M")"
         touch release.txt
-        echo "for centos 7" >> release.txt
         echo "::set-output name=status::success"
         
     - name: Upload kernel to release
