--- a/.github/workflows/Ubuntu_kernel_arm64_latest.yml
+++ b/.github/workflows/Ubuntu_kernel_arm64_latest.yml
@@ -37,6 +37,7 @@ jobs:
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
+        sudo apt update && apt install dwarves -y
         sudo chown $USER:$GROUPS /workdir
         sudo chown $USER:$GROUPS /workdir/upload
 
