--- a/.github/workflows/Ubuntu_kernel_latest.yml
+++ b/.github/workflows/Ubuntu_kernel_latest.yml
@@ -81,7 +81,13 @@ jobs:
         kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
         cd linux-$kernel_ver
         wget -O .config https://raw.githubusercontent.com/ylx2016/kernel/master/config_elrepo
-        sed -ri '/CONFIG_SYSTEM_TRUSTED_KEYS/s/=.+/=""/g' .config && scripts/config --disable MODULE_SIG && scripts/config --disable DEBUG_INFO
+        sed -ri '/CONFIG_SYSTEM_TRUSTED_KEYS/s/=.+/=""/g' .config
+        scripts/config --disable MODULE_SIG
+        scripts/config --disable DEBUG_INFO
+        scripts/config --disable DEBUG_INFO_BTF
+        scripts/config --disable DEBUG_INFO_DWARF4
+        scripts/config --disable DEBUG_INFO_DWARF5
+        scripts/config --disable DEBUG_INFO_NONE
         echo -e "$(nproc) thread compile"
         sudo time make -j$(nproc) deb-pkg
         cd /workdir && mv *.deb /workdir/upload
